--- a/assets/_layout.html
+++ b/assets/_layout.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TCP Wiki</title>
+    <title>TCP.WIKI</title>
     <link rel="stylesheet" href="/assets/main.css">
 </head>
 <body>
     <header>
-        <h1>TCP Wiki</h1>
+        <h1>TCP.WIKI</h1>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
