minor theme work

--- a/assets/_layout.html
+++ b/assets/_layout.html
@@ -13,12 +13,15 @@
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <!-- placeholder -->
+                <!-- Add more links to your menubar here -->
+                <li><a href="/what">What</a></li>
+                <li><a href="/who">Who</a></li>
             </ul>
         </nav>
     </header>
-    <div id="content">
-        {{.Content}}
-    </div>
+    <main>
+        {{ .Content }}
+    </main>
 </body>
 </html>
+
