--- a/assets/_layout.html
+++ b/assets/_layout.html
@@ -24,7 +24,7 @@
             {{ .Content }}
         </div>
         <hr>
-        <div style="font-size: 0.3em; text-align: right; margin-bottom: 5px;">
+        <div class="page-info">
             {{- if eq .Author .LastModifier -}}
               Authored: {{ .Author }} @ {{ .AuthoredDate.Format "2006/01/02" }}
             {{- else -}}
