implement config file and local directory

--- a/assets/_layout.html
+++ b/assets/_layout.html
@@ -24,13 +24,15 @@
             {{ .Content }}
         </div>
         <hr>
+        {{ if .UseGit }}
         <div class="page-info">
             {{- if eq .Author .LastModifier -}}
               Authored: {{ .Author }} @ {{ .AuthoredDate.Format "2006/01/02" }}
             {{- else -}}
               Authored: {{ .Author }} @ {{ .AuthoredDate.Format "2006/01/02" }} - Modified: {{ .LastModifier }} @ {{ .LastModifiedDate.Format "2006/01/02" }}
             {{- end -}}
-          </div>          
+        </div>
+        {{ end }}
         <div class="comments">
             <h2>Comments</h2>
             {{ range .Comments }}
